[package]
name = "zi"
version = "0.2.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A declarative library for building monospace user interfaces"
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zi"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
euclid = "0.22.6"
log = "0.4.14"
ropey = "1.3.1"
smallstr = "0.2.0"
smallvec = "1.6.1"
unicode-segmentation = "1.8.0"
unicode-width = "0.1.8"

[dev-dependencies]
colorous = "1.0.5"
criterion = { version = "0.3.4", features = ["html_reports"] }
env_logger = "0.8.4"
num-complex = "0.4.0"
rayon = "1.5.1"

zi-crossterm = { version = "0.2.0", path = "backends/crossterm" }
zi-wgpu = { version = "0.2.0", path = "backends/wgpu" }

[[bench]]
name = "senders"
harness = false
