[package]
name = "zi"
version = "0.2.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "An incremental declarative library for building terminal user interfaces."
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zi"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
euclid = "0.22.3"
log = "0.4.14"
maplit = "1.0.2"
ropey = "1.2.0"
smallstr = "0.2.0"
smallvec = "1.6.1"
thiserror = "1.0.24"
unicode-segmentation = "1.7.1"
unicode-width = "0.1.8"

[dev-dependencies]
colorous = "1.0.3"
criterion = "0.3.4"
env_logger = "0.8.3"
num-complex = "0.3.1"
rayon = "1.5.0"
zi-crossterm = { version = "0.2.0", path = "backends/crossterm" }

[[bench]]
name = "senders"
harness = false
