[package]
name = "zi-term"
version = "0.3.1"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A terminal backend for zi using crossterm"
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zi"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
crossterm = { version = "0.23.2", features = ["event-stream"] }
futures = "0.3.21"
log = "0.4.16"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["io-util", "macros", "rt", "sync", "time"] }

zi = { version = "0.3.1", path = "../zi" }
