[package]
name = "zi-crossterm"
version = "0.2.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A terminal backend for zi using crossterm"
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zi"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
crossterm = { version = "0.19.0", features = ["event-stream"] }
futures = "0.3.14"
log = "0.4.14"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["io-util", "macros", "rt", "sync", "time"] }
unicode-width = "0.1.8"
zi = { version = "0.2.0", path = "../.." }
