[package]
name = "zi-wgpu"
version = "0.1.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "An incremental declarative library for building terminal user interfaces."
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zi"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bytemuck = "1.5.1"
crossfont = "0.3.0"
futures = "0.3.15"
glam = "0.15.2"
glob = "0.3.0"
log = "0.4.14"
parking_lot = "0.11.1"
thiserror = "1.0.25"
unicode-width = "0.1.8"
wgpu = "0.8.1"
winit = "0.25.0"
zi = { version = "0.2.0", path = "../.." }

[build-dependencies]
anyhow = "1.0.40"
glob = "0.3.0"
shaderc = "0.7.2"
